push new learning guide